--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: C
 sudo: required
 before_install:
   - sudo apt-get update
-  - sudo apt-get upgrade
-  - sudo apt install git
+  - sudo apt-get install git
 before_script:
   - git config --global user.name "Jarl-Penguin"
   - git config --global user.email "jarlpenguin@outlook.com"
