--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install git
 before_script:
-  - git config --global user.name "Jarl-Penguin"
-  - git config --global user.email "jarlpenguin@outlook.com"
+  - git config --global user.name "$GITHUB_USER"
+  - git config --global user.email "$GITHUB_EMAIL"
 script:
   - cd $HOME
-  - git clone https://JarlPenguin:"$GITHUB_TOKEN"@github.com/JarlPenguin/releases.git
+  - git clone https://"$GITHUB_USER":"$GITHUB_TOKEN"@github.com/"$GITHUB_USER"/releases.git
   - cd releases
-  - source upstream.sh
+  - function upstream() { for var in montana-los15 cactus-los16 montana-los16 montana-carbon7 montana-los14; do git checkout $var; git merge master -m "Automatic upstream merge" --signoff; git push; done; git checkout master; }
+  - upstream
