--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ script:
   - cd $HOME
   - git clone https://"$GITHUB_USER":"$GITHUB_TOKEN"@github.com/"$GITHUB_USER"/releases.git
   - cd releases
-  - function upstream() { for var in montana-pe9plus montana-los15 cactus-los16 montana-los16 montana-carbon7 montana-los14; do git checkout $var; git merge master -m "Automatic upstream merge" --signoff; git push; done; git checkout master; }
+  - function upstream() { for var in montana-pe9plus montana-los15 cactus-los16 montana-los16 montana-carbon7 montana-los14; do git checkout $var; git rebase master; git push -f; done; git checkout master; }
   - upstream
