--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         git config --global user.email "${GITHUB_EMAIL}"
         git clone https://"${GITHUB_USER}":"${GITHUB_TOKEN}"@github.com/"${GITHUB_USER}"/releases.git
         cd releases
-        function upstream() { for var in ahannah-los17 cedric-los17 cedric-los18 hannah-los17 montana-los17 montana-los18 rhannah-los17; do git checkout $var; git rebase master; git push -f; done; git checkout master; }
+        function upstream() { for var in cedric-los18 montana-los18 montana-los18-4.9; do git checkout $var; git rebase master; git push -f; done; git checkout master; }
         upstream
       env:
         GITHUB_EMAIL: ${{ secrets.GITHUB_EMAIL }}
