--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Upstream
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
         git config --global user.email "${GITHUB_EMAIL}"
         git clone https://"${GITHUB_USER}":"${GITHUB_TOKEN}"@github.com/"${GITHUB_USER}"/releases.git
         cd releases
-        function upstream() { for var in montana-lineageos18-4.9 nio-pe12 nio-pe13; do git checkout $var; git rebase master; git push -f; done; git checkout master; }
+        function upstream() { for var in montana-lineageos18-4.9 nio-pe12 nio-pe13; do git checkout $var; git rebase main; git push -f; done; git checkout main; }
         upstream
       env:
         GITHUB_EMAIL: ${{ secrets.GITHUB_EMAIL }}
