--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         git config --global user.email "${EMAIL}"
         git clone https://"${USERNAME}":"${TOKEN}"@github.com/"${USERNAME}"/releases.git
         cd releases
-        function upstream() { for var in montana-lineageos18-4.9 nio-pe12 nio-pe13; do git checkout $var; git rebase main; git push -f; done; git checkout main; }
+        function upstream() { for var in montana-lineageos18-4.9 nio-pe13 surya-pe13; do git checkout $var; git rebase main; git push -f; done; git checkout main; }
         upstream
       env:
         EMAIL: ${{ secrets.EMAIL }}
